# synmax

./: .env.example  .gitignore  Makefile  README.md  assignment.md  auto  pyproject.toml  tasks_v0.md  test_plan.json
examples/: queries.md
examples/agent_plans/: README.md  regime_shifts_2021.json  simple_aggregation_example.json
examples/expected/: daily.json  regime_shifts_2021.json  simple_aggregation_example.json
src/data_agent/: __init__.py  cli.py  config.py
src/data_agent/cache/: __init__.py  cache.py
src/data_agent/core/: __init__.py  agent_executor.py  agent_planner.py  agent_schema.py  agent_shim.py  answer.py  causal.py  cluster.py  dsl_loader.py  events.py  evidence.py  executor.py  export.py  handles.py  llm_client.py  metrics.py  multi_stage.py  ops.py  plan_schema.py  planner.py
src/data_agent/core/steps/: __init__.py  aggregate.py  changepoint.py  evidence_collect.py  filter.py  limit.py  rank.py  resample.py  save_artifact.py  stl_deseasonalize.py
src/data_agent/ingest/: __init__.py  dictionary.py  loader.py  rollups.py
src/data_agent/rules/: __init__.py  engine.py
src/data_agent/utils/: __init__.py  logging.py
tests/: __init__.py  test_agent_executor.py  test_agent_integration.py  test_agent_planner.py  test_agent_schema.py  test_answer_llm.py  test_basic.py  test_cache.py  test_cache_integration.py  test_causal.py  test_cli.py  test_cli_agent.py  test_cli_backward_compat.py  test_cluster.py  test_events.py  test_evidence_agent.py  test_example_regime_shifts.py  test_executor.py  test_fallbacks.py  test_handles.py  test_ingest.py  test_llm_client.py  test_metrics.py  test_metrics_integration.py  test_planner.py  test_rollups.py  test_rules.py  test_steps.py
tests/fixtures/: __init__.py  synthetic_cp.py  synthetic_stl.py
