[project]
name = "synmax-data-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "jupyterlab (>=4.4.7,<5.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "polars (>=1.33.1,<2.0.0)",
    "duckdb (>=1.4.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
